--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version "$springBootVersion"
     id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
+    id "com.github.davidmc24.gradle.plugin.avro" version "$gradlePluginAvroVersion"
+
 }
 
 group = 'com.innowise'
@@ -19,6 +21,9 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://packages.confluent.io/maven"
+    }
 }
 
 dependencies {
@@ -34,6 +39,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation "org.apache.avro:avro:$avroVersion"
+    implementation "io.confluent:kafka-avro-serializer:$kafkaAvroSerializerVersion"
+    implementation "io.confluent:kafka-schema-registry-client:$kafkaSchemaRegistryClientVersion"
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
@@ -47,6 +56,12 @@ dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
+}
+
+generateAvroJava {
+    source("/src/main/resources/avro")
+    include("**/*.avsc")
+    outputDir = file("${projectDir}/src/main/java")
 }
 
 tasks.named('test') {
